Moved actions to seperate file, added express interface

--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "author": "Tiger Oakes",
   "license": "UNLICENSED",
   "bugs": {
-    "url": "https://github.com/NotWoods/smart-dorm/issues"
+    "url": "https://github.com/NotWoods/cell-wall/issues"
   },
   "dependencies": {
     "adbkit": "^2.10.0",
     "chalk": "^2.0.1",
     "express": "^4.15.3",
     "ip": "^1.1.5",
-    "node-dash-button": "^0.6.1",
+    "moment": "^2.18.1",
     "node-fetch": "^1.7.1"
   },
-  "homepage": "https://github.com/NotWoods/smart-dorm#readme",
-  "os": [
-    "linux"
-  ]
+  "optionalDependencies": {
+    "node-dash-button": "^0.6.1"
+  },
+  "homepage": "https://github.com/NotWoods/cell-wall#readme"
 }
