--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -28,10 +28,12 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.0-rc01'
     implementation 'androidx.core:core-ktx:1.0.0-rc01'
+    implementation 'androidx.fragment:fragment-ktx:1.0.0-alpha1'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'com.google.android.material:material:1.0.0-rc01'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-rc01'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0-rc01'
+    implementation 'androidx.annotation:annotation:1.0.0-alpha1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha4'
