--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Tiger Oakes",
   "license": "UNLICENSED",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "interactjs": "^1.3.4",
     "socket.io": "^2.1.1",
