--- a/client/app/build.gradle
+++ b/client/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.0'
 
+    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.json:json:20140107'
     testImplementation 'org.mockito:mockito-core:2.21.0'
