--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express-validator": "^5.3.0",
     "interactjs": "^1.3.4",
     "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1"
+    "socket.io-client": "^2.1.1",
+    "validator": "^10.9.0"
   },
   "devDependencies": {
     "@types/dotenv": "^4.0.3",
@@ -25,6 +26,7 @@
     "@types/jest": "^23.3.9",
     "@types/socket.io": "^1.4.39",
     "@types/socket.io-client": "^1.4.32",
+    "@types/validator": "^9.4.3",
     "jest": "^23.6.0",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.6"
