--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cell-wall-server",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Server for the CellWall",
   "main": "src/server.js",
   "scripts": {
@@ -27,6 +27,7 @@
     "@types/socket.io-client": "^1.4.32",
     "@types/validator": "^9.4.3",
     "jest": "^23.6.0",
+    "merge": "^1.2.1",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.6"
   }
