--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "express": "^4.16.4",
     "express-validator": "^5.3.0",
     "interactjs": "^1.3.4",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "validator": "^10.9.0"
@@ -23,6 +25,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.9",
+    "@types/passport-google-oauth": "^1.0.39",
     "@types/socket.io": "^1.4.39",
     "@types/socket.io-client": "^1.4.32",
     "@types/validator": "^9.4.3",
