--- a/server/package.json
+++ b/server/package.json
@@ -1,37 +1,56 @@
 {
-  "name": "cell-wall-server",
-  "version": "2.0.0",
-  "description": "Server for the CellWall",
-  "main": "index.js",
-  "scripts": {
-    "test": "jest --forceExit --coverage --verbose",
-    "build": "tsc",
-    "start": "node index.js"
-  },
-  "author": "Tiger Oakes",
-  "license": "UNLICENSED",
-  "dependencies": {
-    "dotenv": "^6.1.0",
-    "express": "^4.16.4",
-    "express-validator": "^5.3.0",
-    "interactjs": "^1.3.4",
-    "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0",
-    "socket.io": "^2.1.1",
-    "socket.io-client": "^2.1.1",
-    "validator": "^10.9.0"
-  },
-  "devDependencies": {
-    "@types/dotenv": "^4.0.3",
-    "@types/express": "^4.16.0",
-    "@types/jest": "^23.3.9",
-    "@types/passport-google-oauth": "^1.0.39",
-    "@types/socket.io": "^1.4.39",
-    "@types/socket.io-client": "^1.4.32",
-    "@types/validator": "^9.4.3",
-    "jest": "^23.6.0",
-    "merge": "^1.2.1",
-    "ts-jest": "^23.10.4",
-    "typescript": "^3.1.6"
-  }
+    "name": "cell-wall-server",
+    "version": "2.0.0",
+    "description": "Server for the CellWall",
+    "license": "UNLICENSED",
+    "author": "Tiger Oakes <contact@tigeroakes.com> (https://tigeroakes.com)",
+    "repository": "NotWoods/cell-wall",
+    "bugs": "https://github.com/NotWoods/cell-wall/issues",
+    "homepage": "https://github.com/NotWoods/cell-wall#readme",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest --forceExit --coverage --verbose",
+        "build": "tsc",
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "dotenv": "^6.1.0",
+        "express": "^4.16.4",
+        "express-validator": "^5.3.0",
+        "interactjs": "^1.3.4",
+        "passport": "^0.4.0",
+        "passport-google-oauth": "^1.0.0",
+        "socket.io": "^2.1.1",
+        "socket.io-client": "^2.1.1",
+        "validator": "^10.9.0"
+    },
+    "devDependencies": {
+        "@types/dotenv": "^4.0.3",
+        "@types/express": "^4.16.0",
+        "@types/jest": "^23.3.9",
+        "@types/passport-google-oauth": "^1.0.39",
+        "@types/socket.io": "^1.4.39",
+        "@types/socket.io-client": "^1.4.32",
+        "@types/validator": "^9.4.3",
+        "jest": "^23.6.0",
+        "merge": "^1.2.1",
+        "ts-jest": "^23.10.4",
+        "typescript": "^3.1.6"
+    },
+    "engines": {
+        "node": ">=10.14.2"
+    },
+    "jest": {
+        "preset": "ts-jest"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "npm run lint"
+        }
+    },
+    "prettier": {
+        "singleQuote": true,
+        "trailingComma": "all",
+        "proseWrap": "always"
+    }
 }
