--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,9 @@
         "express": "^4.16.4",
         "express-validator": "^5.3.1",
         "interactjs": "^1.3.4",
+        "koa": "^2.7.0",
+        "koa-bodyparser": "^4.2.1",
+        "koa-static": "^5.0.0",
         "passport": "^0.4.0",
         "passport-google-oauth": "^1.0.0",
         "socket.io": "^2.2.0",
@@ -33,6 +36,9 @@
         "@types/dotenv": "^6.1.0",
         "@types/express": "^4.16.1",
         "@types/jest": "^23.3.13",
+        "@types/koa": "^2.0.48",
+        "@types/koa-bodyparser": "^4.2.1",
+        "@types/koa-static": "^4.0.0",
         "@types/passport-google-oauth": "^1.0.39",
         "@types/socket.io": "^2.1.2",
         "@types/socket.io-client": "^1.4.32",
