--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,5 @@
     "**/coverge": true,
     "package-lock.json": true
   },
-  "typescript.referencesCodeLens.enabled": true,
-  "python.pythonPath": "C:\\Program Files\\Python37\\python.exe"
+  "typescript.referencesCodeLens.enabled": true
 }
