--- a/server/package.json
+++ b/server/package.json
@@ -20,31 +20,21 @@
     "dependencies": {
         "appium-adb": "^7.2.0",
         "dotenv": "^6.2.0",
-        "express": "^4.16.4",
-        "express-validator": "^5.3.1",
         "interactjs": "^1.3.4",
         "koa": "^2.7.0",
-        "koa-bodyparser": "^4.2.1",
         "koa-static": "^5.0.0",
-        "passport": "^0.4.0",
-        "passport-google-oauth": "^1.0.0",
         "socket.io": "^2.2.0",
-        "socket.io-client": "^2.2.0",
-        "validator": "^10.10.0"
+        "socket.io-client": "^2.2.0"
     },
     "devDependencies": {
         "@types/dotenv": "^6.1.0",
-        "@types/express": "^4.16.1",
         "@types/jest": "^23.3.13",
         "@types/koa": "^2.0.48",
-        "@types/koa-bodyparser": "^4.2.1",
+        "@types/koa-joi-router": "^5.1.0",
         "@types/koa-static": "^4.0.0",
-        "@types/passport-google-oauth": "^1.0.39",
         "@types/socket.io": "^2.1.2",
         "@types/socket.io-client": "^1.4.32",
-        "@types/validator": "^10.9.0",
         "jest": "^23.6.0",
-        "merge": "^1.2.1",
         "prettier": "^1.16.3",
         "ts-jest": "^23.10.5",
         "typescript": "^3.2.4"
