--- a/web/package.json
+++ b/web/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@cell-wall/server",
+    "name": "@cell-wall/web",
     "version": "2.0.0",
-    "description": "Server for the CellWall",
+    "description": "Web client for the CellWall",
     "private": true,
     "license": "UNLICENSED",
     "author": "Tiger Oakes <contact@tigeroakes.com> (https://tigeroakes.com)",
@@ -10,35 +10,31 @@
     "homepage": "https://github.com/NotWoods/cell-wall#readme",
     "main": "src/server.js",
     "scripts": {
-        "test": "jest --forceExit --coverage --verbose",
-        "build": "tsc",
-        "start": "node src/server.js",
+        "test": "jest",
+        "build": "rollup -c",
         "lint:ts": "prettier --parser typescript \"src/**/*.ts\"",
-        "lint": "npm run lint:ts -- --write",
-        "lint:check": "npm run build && npm run lint:ts -- --check"
+        "lint:html": "prettier --parser html \"public/**/*.html\"",
+        "lint": "npm run lint:ts -- --write && npm run lint:html -- --write",
+        "lint:check": "npm run build && npm run lint:ts -- --check && npm run lint:html -- --check"
     },
     "dependencies": {
-        "appium-adb": "^7.2.0",
-        "dotenv": "^6.2.0",
-        "koa": "^2.7.0",
-        "koa-joi-router": "^5.2.0",
-        "koa-static": "^5.0.0",
-        "socket.io": "^2.2.0"
+        "interactjs": "^1.3.4",
+        "socket.io-client": "^2.2.0"
     },
     "devDependencies": {
-        "@types/dotenv": "^6.1.0",
         "@types/jest": "^23.3.13",
-        "@types/koa": "^2.0.48",
-        "@types/koa-joi-router": "^5.1.0",
-        "@types/koa-static": "^4.0.0",
-        "@types/socket.io": "^2.1.2",
+        "@types/socket.io-client": "^1.4.32",
         "jest": "^23.6.0",
         "prettier": "^1.16.3",
+        "rollup": "^1.1.2",
+        "rollup-plugin-commonjs": "^9.2.0",
+        "rollup-plugin-node-resolve": "^4.0.0",
+        "rollup-plugin-replace": "^2.1.0",
+        "rollup-plugin-terser": "^4.0.3",
+        "rollup-plugin-typescript": "^1.0.0",
         "ts-jest": "^23.10.5",
+        "tslib": "^1.9.3",
         "typescript": "^3.2.4"
-    },
-    "engines": {
-        "node": ">=10.14.2"
     },
     "jest": {
         "preset": "ts-jest"
