--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "homepage": "https://github.com/NotWoods/cell-wall#readme",
     "main": "src/server.js",
     "scripts": {
-        "test": "jest --forceExit --coverage --verbose",
+        "test": "jest",
         "build": "tsc",
         "start": "node src/server.js",
         "lint:ts": "prettier --parser typescript \"src/**/*.ts\"",
@@ -32,8 +32,10 @@
         "@types/koa-joi-router": "^5.1.0",
         "@types/koa-static": "^4.0.0",
         "@types/socket.io": "^2.1.2",
+        "@types/supertest": "^2.0.7",
         "jest": "^23.6.0",
         "prettier": "^1.16.3",
+        "supertest": "^3.4.2",
         "ts-jest": "^23.10.5",
         "typescript": "^3.2.4"
     },
