--- a/web/package.json
+++ b/web/package.json
@@ -15,17 +15,17 @@
         "lint:ts": "prettier --parser typescript \"src/**/*.ts\"",
         "lint:html": "prettier --parser html \"public/**/*.html\"",
         "lint": "npm run lint:ts -- --write && npm run lint:html -- --write",
-        "lint:check": "npm run build && npm run lint:ts -- --check && npm run lint:html -- --check"
+        "lint:check": "tsc --noEmit && npm run lint:ts -- --check && npm run lint:html -- --check"
     },
     "dependencies": {
         "interactjs": "^1.3.4",
         "socket.io-client": "^2.2.0"
     },
     "devDependencies": {
-        "@types/jest": "^23.3.13",
+        "@types/jest": "^23.3.14",
         "@types/socket.io-client": "^1.4.32",
         "jest": "^23.6.0",
-        "prettier": "^1.16.3",
+        "prettier": "^1.16.4",
         "rollup": "^1.1.2",
         "rollup-plugin-commonjs": "^9.2.0",
         "rollup-plugin-node-resolve": "^4.0.0",
@@ -34,7 +34,7 @@
         "rollup-plugin-typescript": "^1.0.0",
         "ts-jest": "^23.10.5",
         "tslib": "^1.9.3",
-        "typescript": "^3.2.4"
+        "typescript": "^3.3.1"
     },
     "jest": {
         "preset": "ts-jest"
