--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "include": ["./src/**/*"],
+    "include": ["./src/**/*", "./test/**/*"],
     "compilerOptions": {
         /* Basic Options */
         "target": "es2018",
