--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,7 @@
     "scripts": {
         "test": "jest",
         "build": "tsc",
-        "start": "node src/server.js",
+        "start": "node lib/server.js",
         "lint:ts": "prettier --parser typescript \"src/**/*.ts\"",
         "lint": "npm run lint:ts -- --write",
         "lint:check": "npm run build && npm run lint:ts -- --check"
@@ -29,8 +29,8 @@
         "@types/dotenv": "^6.1.0",
         "@types/jest": "^23.3.14",
         "@types/koa": "^2.0.48",
-        "@types/koa-joi-router": "^5.2.0",
-        "@types/koa-static": "^4.0.0",
+        "@types/koa-joi-router": "^5.2.1",
+        "@types/koa-static": "^4.0.1",
         "@types/socket.io": "^2.1.2",
         "@types/supertest": "^2.0.7",
         "jest": "^23.6.0",
