--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,14 +1,28 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.11'
+    ext {
+        constraintLayoutVersion = '1.1.3'
+        coroutinesVersion = '1.1.1'
+        junitVersion = '4.12'
+        glideVersion = '4.8.0'
+        kotlinVersion = '1.3.21'
+        ktxVersion = '1.0.1'
+        lifecycleVersion = '2.0.0'
+        materialVersion = '1.0.0'
+        mockitoVersion = '2.23.4'
+        okHttpVersion = '3.13.1'
+        recyclerViewVersion = '1.0.0'
+        retrofitVersion = '2.5.0'
+        supportLibraryVersion = '1.0.2'
+    }
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.android.tools.build:gradle:3.3.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
