Turn off travis emulator

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ matrix:
           before_script:
               - cd android
           script:
-              - ./gradlew build connectedCheck
+              - ./gradlew build lint test --stacktrace
