--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,14 +6,15 @@ buildscript {
         coroutinesVersion = '1.1.1'
         junitVersion = '4.12'
         glideVersion = '4.9.0'
-        kotlinVersion = '1.3.21'
-        ktxVersion = '1.0.1'
+        kotlinVersion = '1.3.31'
+        coreKtxVersion = '1.0.2'
         lifecycleVersion = '2.0.0'
         materialVersion = '1.0.0'
         mockitoVersion = '2.25.1'
         okHttpVersion = '3.14.0'
         recyclerViewVersion = '1.0.0'
         retrofitVersion = '2.5.0'
+        testVersion = '1.2.0'
         supportLibraryVersion = '1.0.2'
     }
     repositories {
@@ -21,7 +22,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
