--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,30 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext {
-        constraintLayoutVersion = '1.1.3'
-        coroutinesVersion = '1.1.1'
-        junitVersion = '4.12'
-        glideVersion = '4.9.0'
-        kotlinVersion = '1.3.31'
-        coreKtxVersion = '1.0.2'
-        lifecycleVersion = '2.0.0'
-        materialVersion = '1.0.0'
-        mockitoVersion = '2.25.1'
-        okHttpVersion = '3.14.0'
-        recyclerViewVersion = '1.0.0'
-        retrofitVersion = '2.5.0'
-        testVersion = '1.2.0'
-        supportLibraryVersion = '1.0.2'
-    }
+    ext.kotlin_version = '1.3.41'
     repositories {
         google()
         jcenter()
+        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-
+        classpath 'com.android.tools.build:gradle:3.6.0-alpha05'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -34,6 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        
     }
 }
 
