--- a/server/package.json
+++ b/server/package.json
@@ -18,32 +18,19 @@
         "lint:check": "tsc --noEmit && npm run lint:files -- --check"
     },
     "dependencies": {
-        "appium-adb": "^7.10.0",
-        "dotenv": "^8.0.0",
-        "koa": "^2.7.0",
-        "koa-joi-router": "^6.0.0",
-        "koa-static": "^5.0.0",
-        "socket.io": "^2.2.0"
+        "appium-adb": "^7.10.0"
     },
     "devDependencies": {
-        "@types/dotenv": "^6.1.1",
         "@types/jest": "^24.0.15",
-        "@types/koa": "^2.0.49",
-        "@types/koa-joi-router": "^5.2.2",
-        "@types/koa-static": "^4.0.1",
-        "@types/socket.io": "^2.1.2",
-        "@types/socket.io-client": "^1.4.32",
         "@types/supertest": "^2.0.8",
-        "interactjs": "^1.4.14",
         "jest": "^24.8.0",
         "prettier": "^1.18.2",
-        "rollup": "^1.16/7",
+        "rollup": "^1.17.0",
         "rollup-plugin-commonjs": "^10.0.1",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-replace": "^2.2.0",
         "rollup-plugin-terser": "^5.1.1",
         "rollup-plugin-typescript": "^1.0.1",
-        "socket.io-client": "^2.2.0",
         "supertest": "^4.0.2",
         "ts-jest": "^24.0.2",
         "tslib": "^1.10.0",
