--- a/package.json
+++ b/package.json
@@ -19,18 +19,19 @@
     },
     "dependencies": {
         "appium-adb": "^7.11.0",
+        "get-stream": "^5.1.0",
         "socket.io": "^2.2.0"
     },
     "devDependencies": {
-        "@types/jest": "^24.0.15",
+        "@types/jest": "^24.0.17",
         "@types/socket.io": "^2.1.2",
         "@types/socket.io-client": "^1.4.32",
         "@types/supertest": "^2.0.8",
         "interactjs": "^1.5.4",
-        "jest": "^24.8.0",
+        "jest": "^24.9.0",
         "prettier": "^1.18.2",
-        "rollup": "^1.17.0",
-        "rollup-plugin-commonjs": "^10.0.1",
+        "rollup": "^1.19.4",
+        "rollup-plugin-commonjs": "^10.0.2",
         "rollup-plugin-node-resolve": "^5.2.0",
         "rollup-plugin-replace": "^2.2.0",
         "rollup-plugin-terser": "^5.1.1",
