--- a/javascript/android-bridge/src/tsconfig.json
+++ b/javascript/android-bridge/src/tsconfig.json
@@ -1,6 +1,4 @@
 {
   "extends": "../../tsconfig.base.json",
-  "compilerOptions": {
-    "paths": { "appium-adb": ["../types/appium-adb"] }
-  }
+  "include": ["*"]
 }
