Add server code

--- a/javascript/tsconfig.json
+++ b/javascript/tsconfig.json
@@ -3,6 +3,8 @@
   "references": [
     { "path": "android-bridge/src" },
     { "path": "android-bridge/test" },
+    { "path": "server/src" },
+    { "path": "server/test" },
     { "path": "types-appium-adb" }
   ]
 }
