--- a/javascript/android-bridge/package.json
+++ b/javascript/android-bridge/package.json
@@ -2,8 +2,9 @@
   "name": "@cell-wall/android-bridge",
   "version": "1.0.0",
   "private": true,
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
-    "build": "",
     "format": "prettier **/*.ts **/*.json --write",
     "test": "ava"
   },
@@ -15,7 +16,6 @@
   "devDependencies": {
     "ava": "^3.13.0",
     "prettier": "^2.1.2",
-    "ts-node": "^9.0.0",
     "typescript": "4.1.0-beta"
   }
 }
