--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -1,14 +1,28 @@
 {
   "name": "@cell-wall/server",
-  "version": "2.0.0",
+  "version": "3.0.0",
   "private": true,
+  "main": "src/index.js",
+  "types": "src/index.d.ts",
   "scripts": {
-    "format": "prettier *.json .vscode/*.json *.md --write"
+    "format": "prettier **/*.json **/*.ts --write",
+    "start": "node src/index.js",
+    "test": "ava"
   },
   "dependencies": {
-    "@cell-wall/android-bridge": "*"
+    "@cell-wall/android-bridge": "*",
+    "fastify": "^3.7.0",
+    "tslib": "^2.0.1"
   },
   "devDependencies": {
-    "prettier": "^2.1.2"
+    "ava": "^3.13.0",
+    "prettier": "^2.1.2",
+    "typescript": "4.1.0-beta"
+  },
+  "ava": {
+    "files": [
+      "test/**/*",
+      "!test/mocks"
+    ]
   }
 }
