Add build scripts to each package.json

--- a/javascript/android-bridge/package.json
+++ b/javascript/android-bridge/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "types": "src/index.d.ts",
   "scripts": {
+    "build": "tsc --build src",
     "format": "prettier **/*.ts **/*.json --write",
+    "pretest": "tsc --build test",
     "test": "ava"
   },
   "dependencies": {
