--- a/javascript/server/package.json
+++ b/javascript/server/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@cell-wall/android-bridge": "*",
     "fastify": "^3.7.0",
+    "fastify-formbody": "^5.0.0",
     "socket.io": "^2.3.0",
     "tslib": "^2.0.1"
   },
   "devDependencies": {
     "@types/socket.io": "^2.1.11",
+    "@types/yargs-parser": "^15.0.0",
     "ava": "^3.13.0",
     "prettier": "^2.1.2",
     "typescript": "4.1.0-beta"
