--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,16 +63,21 @@ dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.0'
 
-  implementation 'androidx.appcompat:appcompat:1.2.0'
+  implementation "androidx.activity:activity-ktx:1.2.0-beta01"
+  implementation 'androidx.appcompat:appcompat:1.3.0-alpha02'
   implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
   implementation 'androidx.core:core-ktx:1.3.2'
   implementation "androidx.datastore:datastore-core:$datastore_version"
-  implementation 'androidx.fragment:fragment-ktx:1.2.5'
+  implementation 'androidx.fragment:fragment-ktx:1.3.0-beta01'
+  implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
   implementation "androidx.preference:preference-ktx:1.1.1"
   implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
   implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
-  implementation  "com.google.protobuf:protobuf-javalite:3.10.0"
+  implementation "com.google.protobuf:protobuf-javalite:3.10.0"
+  implementation "com.squareup.moshi:moshi-adapters:1.8.0"
+  implementation "com.squareup.moshi:moshi-kotlin:1.8.0"
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
   implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
   implementation('io.socket:socket.io-client:1.0.0') {
