--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,10 @@ build
 .rpt2_cache
 *.tsbuildinfo
 javascript/*/src/**/*.js
-javascript/*/src/**/*.d.ts
 javascript/*/test/**/*.js
 javascript/*/test/**/*.d.ts
+javascript/*/src/**/*.d.ts
+!javascript/types-appium-adb/src/**/*.d.ts
 
 # Logs
 *.log
