--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,10 @@
     "**/*.js.map": {
       "when": "$(basename)"
     },
-    "**/*.d.ts": {
-      "when": "$(basename).ts"
-    }
+    "javascript/*/test/**/*.d.ts": true,
+    "javascript/android-bridge/src/**/*.d.ts": true,
+    "javascript/cells/src/**/*.d.ts": true,
+    "javascript/server/src/**/*.d.ts": true
   },
   "editor.formatOnSave": true,
   "search.exclude": {
