--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -27,9 +27,6 @@
         <data android:scheme="http" />
         <data android:scheme="https" />
       </intent-filter>
-      <intent-filter>
-        <action android:name="com.tigeroakes.cellwallclient.DISPLAY" />
-      </intent-filter>
     </activity>
     <activity
       android:name=".ui.MainActivity"
@@ -38,6 +35,7 @@
       android:theme="@style/AppTheme.NoActionBar">
       <intent-filter>
         <action android:name="com.tigeroakes.cellwallclient.DISPLAY" />
+        <category android:name="android.intent.category.DEFAULT" />
       </intent-filter>
     </activity>
   </application>
